# ocean-tensor-package

./: .gitignore  CMakeLists.txt  INSTALL.txt  Makefile.clean  README.md
docs/: design_choices.md  future_work.md  implementation.md  installation.md
docs/python/: index.md  module_core.md  module_dummy.md  module_numpy.md
examples/python/cpu/: compareReference  index.sh  setReference  verify
examples/python/cpu/debug/: ocean_overlap_01.py  ocean_overlap_01.ref  ocean_selfoverlap_01.py  ocean_selfoverlap_01.ref
examples/python/cpu/index/: index_001.py  index_001.ref  index_002.py  index_002.ref  index_003.py  index_003.ref  index_004.py  index_004.ref  index_005.py  index_005.ref  index_006.py  index_006.ref  index_007.py  index_007.ref  index_008.py  index_008.ref  index_009.py  index_009.ref  index_010.py  index_010.ref  index_011.py  index_011.ref  index_012.py  index_012.ref  index_013.py  index_013.ref  index_014.py  index_014.ref  index_015.py  index_015.ref  index_016.py  index_016.ref  index_017.py  index_017.ref  index_018.py  index_018.ref  index_019.py  index_019.ref
examples/python/cpu/numpy/: example_01.py  example_01.ref  (+31 more)
examples/python/gpu/: index.sh  verify
include/: ocean.h  ocean_gpu.h
include/ocean/base/: api.h  arch.h  byteswap.h  config.h  device.h  device_module.h  dtype.h  error.h  format.h  fpe.h  generate_macros.h  half.h  index.h  macros.h  malloc.h  module.h  ocean.h  platform.h  pthread.h  scalar.h  shape.h  storage.h  tensor.h  types.h  warning.h
include/ocean/core/: ocean.h  ocean_gpu.h
include/ocean/module_dummy/: module_dummy.h  module_dummy_cpu.h  module_dummy_gpu.h
interfaces/python/: CMakeLists.txt  Makefile.clean
interfaces/python/lib/: ocean.py  ocean_dummy.py  ocean_numpy.py  pyOceanDummy_cpu.py  pyOceanDummy_gpu.py  pyOceanDummy_itf.py  pyOceanNumpy.py  pyOcean_cpu.py  pyOcean_gpu.py
interfaces/python/pyOcean/: CMakeLists.txt
interfaces/python/pyOcean/cpu/: CMakeLists.txt  pyOcean.c  pyOcean.h  pyOcean_args.c  pyOcean_args.h  pyOcean_compatibility.h  pyOcean_convert.c  pyOcean_convert.h  pyOcean_core.c  pyOcean_core.h  pyOcean_device.c  pyOcean_device.h  pyOcean_device_cpu.c  pyOcean_device_cpu.h  pyOcean_dtype.c  pyOcean_dtype.h  pyOcean_index.c  pyOcean_index.h  pyOcean_module_core.c  pyOcean_module_core.h  pyOcean_opaque.c  pyOcean_opaque.h  pyOcean_scalar.c  pyOcean_scalar.h  pyOcean_storage.c  pyOcean_storage.h  pyOcean_stream.c  pyOcean_stream.h  pyOcean_tensor.c  pyOcean_tensor.h  pyOcean_type_macros.h  setup.py
interfaces/python/pyOcean/gpu/: CMakeLists.txt  pyOcean_device_gpu.c  pyOcean_device_gpu.h  pyOcean_gpu.c  pyOcean_gpu.h  setup.py
interfaces/python/pyOceanDummy/: CMakeLists.txt  Makefile.clean
interfaces/python/pyOceanNumpy/: CMakeLists.txt  pyOceanNumpy.c  setup.py
solid/: CMakeLists.txt  Makefile.clean
solid/include/: solid.h  solid_cpu.h  solid_gpu.h
solid/include/solid/base/cpu/: dtype_cpu.h  generate_macros.h  solid_omp.h
solid/include/solid/base/generic/: api.h  const.h  dtype.h  dtype_assign.h  dtype_macros.h  error.h  fpe.h  generate_all_types.h  generate_all_types2.h  generate_all_types_a.h  generate_all_types_b.h  generate_macros.h  half.h  macros.h  scalar.h  tensor.h  types.h
solid/include/solid/base/gpu/: dtype_gpu.h  generate_macros.h  solid_cuda.h  types_gpu.h
solid/include/solid/core/cpu/: apply_elemwise1.h  apply_elemwise2.h  apply_elemwise2b.h  apply_elemwise3.h  binary_ops_cpu.h  index.h  reduce_all.h  reduce_axis.h  unary_ops_cpu.h
solid/include/solid/core/generic/: binary_ops.h  reduce_ops.h  unary_ops.h
solid/include/solid/core/gpu/: apply_elemwise.h  apply_elemwise1.h  apply_elemwise2.h  apply_elemwise2b.h  apply_elemwise3.h  binary_ops_gpu.h  index1.h  index2.h  reduce_all.h  reduce_axis.h  unary_ops_gpu.h
solid/src/: CMakeLists.txt  Makefile.clean
solid/src/base/: CMakeLists.txt
solid/src/base/cpu/: solid_omp.c
solid/src/base/generic/: error.c  fpe.c  half.c  tensor.c
solid/src/base/gpu/: solid_gpu.c
solid/src/core/: CMakeLists.txt  Makefile.clean
solid/src/core/cpu/: CMakeLists.txt  Makefile.clean  solid_core_cpu.src  template_binary.c  template_blas.c  template_byteswap.c  template_copy.c  template_dtype.c  template_fill.c  template_index.c  template_reduce_all.c  template_reduce_axis.c  template_scalar_copy.c  template_steps.c  template_unary.c
solid/src/core/gpu/: CMakeLists.txt  solid_core_gpu.src  template_binary.cu  template_blas.cu  template_copy.cu  template_dtype.cu  template_dummy.cu  template_fill.cu  template_index.cu  template_reduce_all.cu  template_reduce_axis.cu  template_steps.cu  template_unary.cu
solid/src/core/gpu/cmake/: get_cuda_arch.cmake
solid/src/core/gpu/op/: apply_elemwise.c  apply_elemwise1.c  apply_elemwise2.c  apply_elemwise2b.c  apply_elemwise3.c  index1.c  index2.c  reduce_all.c  reduce_axis.c
src/: CMakeLists.txt  Makefile.clean
src/base/: CMakeLists.txt  config.c  device.c  device_module.c  dtype.c  error.c  format.c  fpe.c  half.c  malloc.c  module.c  ocean.c  pthread.c  shape.c  storage.c  tensor.c  warning.c
src/core/: CMakeLists.txt
src/core/cpu/: device_cpu.c  device_info.c  module_core_cpu.c  ocean.c  storage_cpu.c  tensor_cpu.c
src/core/cpu/op/: tensor_binary_cpu.c  tensor_blas_cpu.c  tensor_byteswap_cpu.c  tensor_copy_cpu.c  tensor_fill_cpu.c  tensor_index_cpu.c  tensor_reduce_all_cpu.c  tensor_reduce_axis_cpu.c  tensor_steps_cpu.c  tensor_unary_cpu.c
src/core/generic/: tensor_op.c
src/core/gpu/: cuda.c  device_gpu.c  device_info.c  module_core_gpu.c  ocean_gpu.c  storage_gpu.c  tensor_gpu.c
src/core/gpu/op/: tensor_binary_gpu.c  tensor_blas_gpu.c  tensor_copy_gpu.c  tensor_fill_gpu.c  tensor_index_gpu.c  tensor_reduce_all_gpu.c  tensor_reduce_axis_gpu.c  tensor_steps_gpu.c  tensor_unary_gpu.c
src/core/interface/: device_itf.c  index_itf.c  module_core.c  scalar_itf.c  storage_itf.c  tensor_itf.c
src/module_dummy/: CMakeLists.txt
src/module_dummy/cpu/: module_dummy_cpu.c
src/module_dummy/gpu/: module_dummy_gpu.c
src/module_dummy/interface/: module_dummy_itf.c
(+516 files in other folders)
